syntax = "proto3";

package hvx.api.v1alpha1.article.proto;
option go_package = "github.com/hvxahv/hvx/APIs/v1alpha1/article";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "proto/v1alpha1/actor/actor.proto";

service Article {
  // Create article or status.
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/api/v1/article",
      body: "*"
    };
  }

  // Get the content of an article or status by its article ID.
  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/api/v1/article/{articleId}",
    };
  }

  // GetArticles Get all posts or statuses published under this account by account ID.
  rpc GetArticles(google.protobuf.Empty) returns (GetArticlesResponse) {
    option (google.api.http) = {
      get: "/api/v1/article/articles",
    };
  }

  // Update Edit article or status content.
  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      put: "/api/v1/article",
      body: "*"
    };
  }

  // Delete a post or status by post or status ID.
  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/api/v1/article",
      body: "*"
    };
  }

  // DeleteArticles Delete all articles
  rpc DeleteArticles(DeleteArticlesRequest) returns (DeleteArticlesResponse) {
    option (google.api.http) = {
      delete: "/api/v1/article/articles",
      body: "*"
    };
  }
}

message ArticleInfo {
  int64 id = 1;
  string title = 2;
  string summary = 3;
  string article = 4;
  repeated string tags = 5;
  string attachmentType = 6;
  repeated string attachments = 7;
  repeated string to = 8;
  repeated string cc = 9;
  bool state = 10;
  bool nsfw = 11;
  string visibility = 12;
}


message CreateRequest {
  int64 actorId = 1;
  string title = 2;
  string summary = 3;
  string article = 4;
  repeated string tags = 5;
  string attachmentType = 6;
  repeated string attachments = 7;
  repeated string to = 8;
  repeated string cc = 9;
  bool state = 10;
  bool nsfw = 11;
  string visibility = 12;
}

message CreateResponse {
  string code = 1;
  string status = 2;
}

message GetRequest {
  string articleId = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetResponse {
  string code = 1;
  actor.proto.ActorData actor = 2;
  ArticleInfo article = 3;
}

message GetArticlesRequest {
  int64 accountId = 1;
}

message GetArticlesResponse {
  string code = 1;
  repeated ArticleInfo data = 2;
}

message UpdateRequest {
  string id = 1;
  string title = 2;
  string summary = 3;
  string article = 4;
  repeated string tags = 5;
  string attachmentType = 6;
  repeated string attachments = 7;
  string nsfw = 8;
  string visibility = 9;
}

message UpdateResponse {
  string code = 1;
  string status = 2;
}

message DeleteRequest {
  int64 articleId = 1;
}

message DeleteResponse {
  string code = 1;
  string status = 2;
}

message DeleteArticlesRequest {
  int64 accountId = 1;
}

message DeleteArticlesResponse {
  string code = 1;
  string status = 2;
}